tests/NormalTests/paczka1/small_fuzzy/58956623.err
Error in line 4: GYc S90 48,6
Error in line 9: A958 S90 96,1
